<resources>
    <string name="app_name">labaratornaya</string>
    <string name="item_menu_show_paris">Cписок поездов, следующих до</string>
    <string name="item_menu_show_time">Cписок поездов, отправляющихся во</string>
    <string name="item_menu_show_edit">Редактировать</string>
    <string name="item_menu_show_delete">Удалить</string>
    <string name="item_menu_show_add">Добавить</string>
    <string-array name="opt">
        <item name="list_std_1">Выберите</item>
        <item name="list_std_1">Список студентов ФАИС</item>
        <item name="list_std_2">Список студентов 2000г.р.</item>
        <item name="refactor">Редактировать</item>
        <item name="delete">Удалить</item>
        <item name="create">Добавить</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>